# ITLR-Fullstack-Recommender-RAG

./: .dockerignore  .env  .env.docker.example  .gitignore  ABOUT_AI_USAGE.md  DEPLOY.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  app.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/rulesets/: main-branch-protection.json
.github/workflows/: cd.yml  ci.yml  eval.yml  reusable-datalake-ci.yml  reusable-node-ci.yml  reusable-python-ci.yml
DataLake/: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  env.example
DataLake/app/: text_clean.py  utils.py
DataLake/cdc/: register-mysql-connector.json
DataLake/dbt/: dbt_project.yml  profiles.yml
DataLake/etl_pipeline/: requirements.txt  setup.py
DataLake/load_dataset_into_mysql/: olist.sql
DataLake/streaming/: cdc_to_bronze.py  cdc_to_tables.py
itlr/: __init__.py  config.py  engine.py
itlr/api/: __init__.py  __main__.py  server.py
itlr/chatbot/: __init__.py  chatbot.py  intent_router.py  knowledge_base.py  opencode_client.py  query_understanding.py
itlr/core/: __init__.py  ann.py  bm25.py  embeddings.py  pipeline.py  rag.py  recommender.py  rerank.py
itlr/data/: __init__.py  generate_interactions.py  generate_items.py
itlr/eval/: __init__.py  (+7 more)
notebooks/: IT Learning Recommender System.ipynb
reports/: EVALUATION.md  KE_HOACH_NANG_CAP.md  cf_eval.md  data_compare.md  human_eval.md  latency.md  ltr.md  off_policy.md  offtopic_eval.md  per_query.csv  per_query_kw_noisy.csv  per_query_kwbig_noisy.csv  per_query_sembig.csv  per_query_sembig_noisy.csv  results.csv  results_kw_noisy.csv  results_kwbig_noisy.csv  results_sembig.csv  results_sembig_noisy.csv  tables.md  tables_kw_noisy.md
scripts/: benchmark.py  build_all.py  clean_catalog.py  expand_glossary.py  fix_recommender_ip.ps1  sync_interactions.ps1  update_data.ps1  update_data.py
tests/: conftest.py  test_chatbot_modes.py  test_eval.py  test_multi_intent_followup.py  test_smoke.py
web/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.mjs  nodemon.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+166 files in other folders)
